remove forward slash from map nav

--- a/Home.html
+++ b/Home.html
@@ -28,7 +28,7 @@
             <div class="dropdown">
               <a href="" class="dropdownBtn">EXPLORE</a>
               <div class="dropdown-content">
-                <a href="/interactiveMap.html">MAP</a>
+                <a href="interactiveMap.html">MAP</a>
 
                   <a href="">GETTING HERE</a>
                 <a href="">VOLUNTEERING</a>
