Removed some items from menu + fixed links

--- a/interactiveMap.html
+++ b/interactiveMap.html
@@ -28,15 +28,11 @@
           <div class="dropdown">
             <a href="" class="dropdownBtn">EXPLORE</a>
             <div class="dropdown-content">
-              <a href="map.html">MAP</a>
-                <a href="">GETTING HERE</a>
-              <a href="">VOLUNTEERING</a>
-              <a href="">CAMPING</a>
-              <a href="">GALLERY</a>
+              <a href="interactiveMap.html">MAP</a>
             </div>
           </div>
           <a href="">LINE UP</a>
-          <a href="">PRE-SALE</a>
+          <a href="form.html">PRE-SALE</a>
         </nav>
   
   </header>
