--- a/FAQsPage.html
+++ b/FAQsPage.html
@@ -249,7 +249,7 @@
           <!-- Grid row-->
         </section>
         <!-- Section: Links -->
-
+        <hr class="my-5" />
         <!-- Section: Social -->
         <section class="text-center mb-5">
           <a
