Nav bar background

--- a/FAQsPage.html
+++ b/FAQsPage.html
@@ -399,7 +399,8 @@
     </main>
 
     <!-- Footer -->
-    <footer class="text-center text-white" style="background-color: #d4589e">
+   
+    <footer class="text-center text-white" style="background-color: #FF74B9">
       <!-- Grid container -->
       <div class="container">
         <!-- Section: Links -->
@@ -501,11 +502,12 @@
       <!-- Grid container -->
 
       <!-- Copyright -->
-      <div class="text-center p-3" style="background-color: #d4589e">
+      <div class="text-center p-3" style="background-color: #FF74B9">
         © 2020 Copyright: Team B
       </div>
       <!-- Copyright -->
     </footer>
+    
     <!-- Footer -->
 
     <!-- Footer -->
