Footer color overridden.html

--- a/FAQsPage.html
+++ b/FAQsPage.html
@@ -400,7 +400,7 @@
 
     <!-- Footer -->
    
-    <footer class="text-center text-white" style="background-color: #FF74B9">
+    <footer class="text-center text-white" style="background-color: #FF66C3">
       <!-- Grid container -->
       <div class="container">
         <!-- Section: Links -->
@@ -502,7 +502,7 @@
       <!-- Grid container -->
 
       <!-- Copyright -->
-      <div class="text-center p-3" style="background-color: #FF74B9">
+      <div class="text-center p-3" style="background-color: #FF66C3">
         © 2020 Copyright: Team B
       </div>
       <!-- Copyright -->
