--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <nav class="navbar navbar-light bg-transparent">
       <div class="container">
         <a class="navbar-brand" href="index.html">
-          <img src="Images/Amplify Fest Date Transparent.png" alt="Header Image" class="header-image">
+          <img src="Images/Amplify Fest Date Transparent.png" alt="Header Image" class="header-image" width="400px">
         </a>
       </div>
     </nav>
