Update index manually changed foot color.html

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
   </div>
 
   <!-- Footer -->
-  <footer class="text-center text-white" style="background-color: #d4589e">
+  <footer class="text-center text-white" style="background-color: #FF66C3">
     <!-- Grid container -->
     <div class="container">
       <!-- Section: Links -->
@@ -157,7 +157,7 @@
     </div>
     <!-- Section: Social -->
     <!-- Copyright -->
-    <div class="text-center p-3" style="background-color: #d4589e">
+    <div class="text-center p-3" style="background-color: #FF66C3">
       © 2020 Copyright: Team B
     </div>
   </footer>
