Cleaned up map html and css, added site JS file

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                 </a>
                 <ul class="dropdown-menu">
                   <li><a class="dropdown-item" href="#">VISITING</a></li>
-                  <li><a class="dropdown-item" href="#">VOLUNTEERING</a></li>
+                  <li><a class="dropdown-item" href="interactiveMap.html">EXPLORE</a></li>
                   <li><hr class="dropdown-divider" /></li>
                   <li><a class="dropdown-item" href="#">GALLERY</a></li>
                 </ul>
