Gallery and hero image changes
- Added Gallery and added Images to it
- Created Logo Slider and added logos
- Made Background image full screen
- Added shadow to headliners

--- a/Gallery.html
+++ b/Gallery.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html>
+
 <head>
   <link rel="stylesheet" href="style2.css">
-  <link rel="stylesheet" href="HomeStyle.css">
+  <link rel="stylesheet" href="Gallery.css">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -19,7 +20,7 @@
     <nav class="navbar navbar-light bg-transparent">
       <div class="container">
         <a class="navbar-brand" href="index.html">
-          <img src="Images/Amplify Fest Date Transparent.png" alt="Amplify Fest Logo" class="header-image">
+          <img src="Images/Amplify Fest Date Transparent.png" alt="Header Image" class="header-image">
         </a>
       </div>
     </nav>
@@ -48,7 +49,7 @@
                   <li><a class="dropdown-item" href="#">VISITING</a></li>
                   <li><a class="dropdown-item" href="#">VOLUNTEERING</a></li>
                   <li><hr class="dropdown-divider" /></li>
-                  <li><a class="dropdown-item" href="Gallery.html">GALLERY</a></li>
+                  <li><a class="dropdown-item" href="#">GALLERY</a></li>
                 </ul>
               </li>
             </ul>
@@ -61,61 +62,69 @@
       </nav>
     </div>
   </header>
-  <!-- FEATURED IMAGE -->
-    <div class="Featured-Image">
-  <img src="Images/Amplify Fest Hero-min.png" width="100%" height="100%" alt="Amplify Fest Colour Canons">
-    </div>
-  <!-- LINEUP -->
+
   <div class="container">
-  <div class="The-Lineup">
-    <div class="row text-center">
-      <div class="col-md-12">
-        <img src="Images/the lineup.png" width="45%" alt="The Lineup">
-      </div>
-    </div>
-    </div>
-  <!-- HEADLINERS -->
-    <div class="Headliners">
-    <div class="row text-center pt-5">
-      <div class="col-md-3">
-        <img src="Images/Amy Housewine.jpg" width="102%" alt="Amy Housewine">
-      </div>
-      <div class="col-md-3">
-        <img src="Images/Snog.jpg" width="100%" alt="Snog">
-      </div>
-      <div class="col-md-3">
-        <img src="Images/Lady Haha.jpg" width="100%" alt="Lady Haha">
-      </div>
-      <div class="col-md-3">
-        <img src="Images/Abba Dabba Doo.jpg" width="102%" alt="Abbda Dabba Doo">
+    <div class="row justify-content-center">
+      <div class="centered-carousel">
+        <div id="myCarousel" class="carousel slide" data-bs-ride="carousel">  
+          <div class="carousel-inner">
+            <div class="carousel-item active">
+              <img src="Gallery/Act performing..jpg" class="d-block w-100" alt="Image 1">
+            </div>
+            <div class="carousel-item">
+              <img src="Gallery/Camping..jpg" class="d-block w-100" alt="Image 2">
+            </div>
+            <div class="carousel-item">
+                <img src="Gallery/Carousel..jpg" class="d-block w-100" alt="Image 3">
+              </div>
+              <div class="carousel-item">
+                <img src="Gallery/Colour canons..jpg" class="d-block w-100" alt="Image 3">
+              </div>
+              <div class="carousel-item">
+                <img src="Gallery/DJ Decks..jpg" class="d-block w-100" alt="Image 4">
+              </div>
+              <div class="carousel-item">
+                <img src="Gallery/Feris wheel..jpg" class="d-block w-100" alt="Image 5">
+              </div>
+              <div class="carousel-item">
+                <img src="Gallery/Festival stage..jpg" class="d-block w-100" alt="Image 6">
+              </div>
+              <div class="carousel-item">
+                <img src="Gallery/Fireworks..jpg" class="d-block w-100" alt="Image 7">
+              </div>
+              <div class="carousel-item">
+                <img src="Gallery/Green lasers..jpg" class="d-block w-100" alt="Image 8">
+              </div>
+              <div class="carousel-item">
+                <img src="Gallery/Light Installations..jpg" class="d-block w-100" alt="Image 9">
+              </div>
+              <div class="carousel-item">
+                <img src="Gallery/Rainbow lasers..jpg" class="d-block w-100" alt="Image 10">
+              </div>
+              <div class="carousel-item">
+                <img src="Gallery/Rainbow lasers..jpg" class="d-block w-100" alt="Image 11">
+              </div>
+              <div class="carousel-item">
+                <img src="Gallery/Red lasers..jpg" class="d-block w-100" alt="Image 12">
+              </div>
+              <div class="carousel-item">
+                <img src="Gallery/Woman and girl..jpg" class="d-block w-100" alt="Image 13">
+              </div>
+          </div>
+          <a class="carousel-control-prev" href="#myCarousel" role="button" data-bs-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Previous</span>
+          </a>
+          <a class="carousel-control-next" href="#myCarousel" role="button" data-bs-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Next</span>
+          </a>
+        </div>
       </div>
     </div>
   </div>
-</div>
-  <!-- SPONSORS -->
-<div class="Sponsors">
-<div class="row text-center pt-5">
-<div class="col-md-12">
-  <img src="Images/Our Sponsors Transparent..png" width="45%" alt="Our Sponsors">
-</div>
-</div>
-</div>
-<div class="logos">
-  <div class="logos-slide">
-      <img src="Images/Jagermeister Logo Transparent-min.png" alt="Jagermeister">
-      <img src="Images/Cocacola transparent-min.png" alt="Cocacola">
-      <img src="Images/MOS logo-min.png" alt="Ministry of Sound">
-      <img src="Images/Malibu Transparent-min.png" alt="Malibu">
-      <img src="Images/Three-UK-logo-min.png" alt="Three">
-  </div>
-  <div class="logos-slide">
-    <img src="Images/Jagermeister Logo Transparent-min.png" alt="Jagermeister">
-    <img src="Images/Cocacola transparent-min.png" alt="Cocacola">
-    <img src="Images/MOS logo-min.png" alt="Ministry of Sound">
-    <img src="Images/Malibu Transparent-min.png" alt="Malibu">
-    <img src="Images/Three-UK-logo-min.png" alt="Three">
-</div>
-</div>
+
+
 
   <!-- Footer -->
   <footer class="text-center text-white" style="background-color: #d4589e">
@@ -206,4 +215,5 @@
     integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
     crossorigin="anonymous"></script>
 </body>
+
 </html>
