Sorting Home Page & spacing in style2.CSS
- Added javascript for countdown
- Created animation for countdown
- Added Dividers
- Cropped Headline acts and made borders with CSS & aplied to merch
- Added Merchandise
- Centered Everything
- Added title to Gallery
- Changed some of the spacing via the z index, removed padding in header
- changed hover colour in header
- There were two header tags so combined these

--- a/Gallery.html
+++ b/Gallery.html
@@ -20,7 +20,7 @@
     <nav class="navbar navbar-light bg-transparent">
       <div class="container">
         <a class="navbar-brand" href="index.html">
-          <img src="Images/Amplify Fest Date Transparent.png" alt="Header Image" class="header-image">
+          <img src="Images/Amplify Fest Date Transparent.png" alt="Header Image" width="400px">
         </a>
       </div>
     </nav>
@@ -65,6 +65,10 @@
 
   <div class="container">
     <div class="row justify-content-center">
+      <div class="Gallery">
+        <img src="Gallery/Gallery transparent.png" alt="Gallery" width="40%">
+        </div>
+      </div>
       <div class="centered-carousel">
         <div id="myCarousel" class="carousel slide" data-bs-ride="carousel">  
           <div class="carousel-inner">
@@ -121,6 +125,9 @@
           </a>
         </div>
       </div>
+      <div Class="Year-Date">
+      <p>AMPLIFY FESTIVAL 2023</p>
+    </div>
     </div>
   </div>
 
