--- a/index.html
+++ b/index.html
@@ -33,10 +33,10 @@
           <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
               <li class="nav-item">
-                <a class="nav-link" href="#">HOME</a>
+                <a class="nav-link" href="index.html">HOME</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">PRE-SALE</a>
+                <a class="nav-link" href="form.html">PRE-SALE</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="#">LINE UP</a>
@@ -45,8 +45,7 @@
                 <a class="nav-link dropdown-toggle" role="button" data-bs-toggle="dropdown" aria-expanded="false">EXPLORE
                 </a>
                 <ul class="dropdown-menu">
-                  <li><a class="dropdown-item" href="#">VISITING</a></li>
-                  <li><a class="dropdown-item" href="interactiveMap.html">EXPLORE</a></li>
+                  <li><a class="dropdown-item" href="interactiveMap.html">MAP</a></li>
                   <li><hr class="dropdown-divider" /></li>
                   <li><a class="dropdown-item" href="Gallery.html">GALLERY</a></li>
                 </ul>
