--- a/interactiveMap.html
+++ b/interactiveMap.html
@@ -3,6 +3,7 @@
 
 <head>
   <link rel="stylesheet" href="style2.css">
+  <link rel="stylesheet" href="stylemappage.css">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -12,7 +13,6 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Audiowide&display=swap" rel="stylesheet">
 </head>
-
 <body>
   <marquee>PRE-SALE AVAILABLE NOW</marquee>
   <header>
@@ -33,10 +33,10 @@
           <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
               <li class="nav-item">
-                <a class="nav-link" href="#">HOME</a>
+                <a class="nav-link" href="index.html">HOME</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">PRE-SALE</a>
+                <a class="nav-link" href="form.html">PRE-SALE</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="#">LINE UP</a>
@@ -45,10 +45,9 @@
                 <a class="nav-link dropdown-toggle" role="button" data-bs-toggle="dropdown" aria-expanded="false">EXPLORE
                 </a>
                 <ul class="dropdown-menu">
-                  <li><a class="dropdown-item" href="#">VISITING</a></li>
-                  <li><a class="dropdown-item" href="interactiveMap.html">EXPLORE</a></li>
+                  <li><a class="dropdown-item" href="interactiveMap.html">MAP</a></li>
                   <li><hr class="dropdown-divider" /></li>
-                  <li><a class="dropdown-item" href="#">GALLERY</a></li>
+                  <li><a class="dropdown-item" href="Gallery.html">GALLERY</a></li>
                 </ul>
               </li>
             </ul>
