--- a/FAQsPage.html
+++ b/FAQsPage.html
@@ -61,10 +61,10 @@
             <div class="collapse navbar-collapse" id="navbarNav">
               <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                 <li class="nav-item">
-                  <a class="nav-link" href="#">Home</a>
+                  <a class="nav-link" href="index.html">Home</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="#">Pre-Sale</a>
+                  <a class="nav-link" href="form.html">Pre-Sale</a>
                 </li>
 
                 <li class="nav-item">
@@ -282,13 +282,13 @@
         <div class="container">
           <div class="row justify-content-md-center">
             <div class="col-12 col-md-10 col-lg-8 col-xl-7 col-xxl-6">
-              <h2 class="mb-4 display-5 text-center">Contact</h2>
-              <p class="text-secondary mb-5 text-center">
+              <h2 class="mb-4 text-center">Contact</h2>
+              <p class="mb-5 text-center">
                 Can't find the answer to your question? The best way to contact
                 us is to use our contact form below. Please fill out all of the
                 required fields and we will get back to you as soon as possible.
               </p>
-              <hr class="w-50 mx-auto mb-5 mb-xl-9 border-dark-subtle" />
+             
             </div>
           </div>
         </div>
@@ -296,7 +296,7 @@
         <div class="container">
           <div class="row justify-content-lg-center">
             <div class="col-12 col-lg-9">
-              <div class="bg-white border rounded shadow-sm overflow-hidden">
+              <div class="bg-transparent border border-dark rounded shadow-sm overflow-hidden">
                 <form action="#!">
                   <div class="row gy-4 gy-xl-5 p-4 p-xl-5">
                     <div class="col-12">
@@ -514,10 +514,13 @@
     <div id="Footer-Marquee">
       <marquee>PRE-SALE AVAILABLE NOW</marquee>
     </div>
-    <script
+   
+  
+  <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
       crossorigin="anonymous"
+      
     ></script>
   </body>
 </html>
