changes to header and alignment

--- a/form.html
+++ b/form.html
@@ -24,6 +24,10 @@
         <a class="navbar-brand" href="index.html">
           <img src="Images/Amplify Fest Date Transparent.png" alt="Header Image" width="400px">
         </a>
+        <div id="countdown">
+          <span id="countdown-text"></span>
+          <span id="countdown-timer"></span>
+      </div>
       </div>
     </nav>
     <div class="navBar">
@@ -229,5 +233,6 @@
     <marquee>PRE-SALE AVAILABLE NOW</marquee>
     <div></div>
   </div>
+  <script src="siteScript.js"></script>
 </body>
 </html>
