--- a/form.html
+++ b/form.html
@@ -102,50 +102,57 @@
             </div>
             <div class="col-md-4">
                 <!-- Accordion -->
-                <div id="accordion-container" class="sticky-top">
-                    <div class="accordion" id="accordionExample">
-                        <div class="accordion-item">
-                            <h2 class="accordion-header">
-                                <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-                                    Day 1 - 23rd August 2024
-                                </button>
-                            </h2>
-                            <div id="collapseOne" class="accordion-collapse collapse show" data-bs-parent="#accordionExample">
-                                <div class="accordion-body">
-                                    <strong>Friday's LineUp</strong> Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta saepe nemo beatae quibusdam ipsa. Esse numquam sunt, quibusdam dicta sequi officiis nemo suscipit, alias ipsa perferendis labore, molestiae excepturi voluptatum! <code>.accordion-body</code>, though the transition does limit overflow.
-                                </div>
-                            </div>
-                        </div>
-                        <div class="accordion-item">
-                            <h2 class="accordion-header">
-                                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-                                    Accordion Item #2
-                                </button>
-                            </h2>
-                            <div id="collapseTwo" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
-                                <div class="accordion-body">
-                                    <strong>This is the second item's accordion body.</strong> It is hidden by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
-                                </div>
-                            </div>
-                        </div>
-                        <div class="accordion-item">
-                            <h2 class="accordion-header">
-                                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-                                    Accordion Item #3
-                                </button>
-                            </h2>
-                            <div id="collapseThree" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
-                                <div class="accordion-body">
-                                    <strong>This is the third item's accordion body.</strong> It is hidden by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
-                                </div>
-                            </div>
-                        </div>
-                    </div>
+      <div class="custom-accordion">
+        <div id="accordion-container" class="sticky-top">
+          <div class="accordion" id="accordionExample">
+            <h2 id="h2style">Ticket's Info</h2>
+            <!-- Accordion Item 1 -->
+            <div class="accordion-item">
+              <h2 class="accordion-header">
+                <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                  General Admission
+                </button>
+              </h2>
+              <div id="collapseOne" class="accordion-collapse collapse show" data-bs-parent="#accordionExample">
+                <div class="accordion-body">
+                  <strong>Includes all days + Camping</strong> Unleash your inner festival spirit with the General Admission ticket! You'll gain access to all days of musical mayhem, camping under the starry skies, and a parking spot for your trusty festival chariot. Dance your heart out, make new friends, and create unforgettable memories. It's your passport to the ultimate festival adventure!
                 </div>
+              </div>
             </div>
+
+            <!-- Accordion Item 2 -->
+            <div class="accordion-item">
+              <h2 class="accordion-header">
+                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+                  VIP
+                </button>
+              </h2>
+              <div id="collapseTwo" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
+                <div class="accordion-body">
+                  <strong>All access</strong> Elevate your festival experience to rockstar status with the VIP ticket. You'll get all the perks of General Admission plus a touch of luxury. Enjoy VIP glamping that turns camping into a comfy retreat. Gain special access to exclusive artist hangout spots, where you might even rub shoulders with your favorite performers. And, of course, relish prime real estate next to the stages to savor every beat and melody like a true VIP.
+                </div>
+              </div>
+            </div>
+
+            <!-- Accordion Item 3 -->
+            <div class="accordion-item">
+              <h2 class="accordion-header">
+                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+                  Backstage Pass
+                </button>
+              </h2>
+              <div id="collapseThree" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
+                <div class="accordion-body">
+                  <strong>No Red Tape</strong> Prepare for an adventure like no other with the Backstage Pass. This limited edition ticket unlocks the hidden gems of the festival world. You'll revel in all the VIP benefits plus an exclusive journey behind the scenes. Sneak peeks, secret handshakes, and the thrill of being where the magic happens. Grab your Backstage Pass, because this is your ticket to the stories you'll tell for years to come.
+                </div>
+              </div>
+            </div>
+          </div>
         </div>
+      </div>
     </div>
-</main>
+  </div>
+  </main>
 
 
   <!-- Footer -->
@@ -229,9 +236,6 @@
       © 2020 Copyright: Team B
     </div>
   </footer>
-  <div id="Footer-Marquee">
-    <marquee>PRE-SALE AVAILABLE NOW</marquee>
-    <div></div>
   </div>
   <script src="siteScript.js"></script>
 </body>
