--- a/form.html
+++ b/form.html
@@ -40,10 +40,10 @@
           <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
               <li class="nav-item">
-                <a class="nav-link" href="#">HOME</a>
+                <a class="nav-link" href="index.html">HOME</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">PRE-SALE</a>
+                <a class="nav-link" href="form.html">PRE-SALE</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="#">LINE UP</a>
