Added Lineup Page + fixed links

--- a/Gallery.html
+++ b/Gallery.html
@@ -34,13 +34,13 @@
           <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
               <li class="nav-item">
-                <a class="nav-link" href="#">HOME</a>
+                <a class="nav-link" href="index.html">HOME</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">PRE-SALE</a>
+                <a class="nav-link" href="form.html">PRE-SALE</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">LINE UP</a>
+                <a class="nav-link" href="lineup.html">LINE UP</a>
               </li>
               <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" role="button" data-bs-toggle="dropdown" aria-expanded="false">EXPLORE
@@ -49,7 +49,7 @@
                   <li><a class="dropdown-item" href="#">VISITING</a></li>
                   <li><a class="dropdown-item" href="#">VOLUNTEERING</a></li>
                   <li><hr class="dropdown-divider" /></li>
-                  <li><a class="dropdown-item" href="#">GALLERY</a></li>
+                  <li><a class="dropdown-item" href="Gallery.html">GALLERY</a></li>
                 </ul>
               </li>
             </ul>
