--- a/FAQsPage.html
+++ b/FAQsPage.html
@@ -61,14 +61,14 @@
             <div class="collapse navbar-collapse" id="navbarNav">
               <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                 <li class="nav-item">
-                  <a class="nav-link" href="#">Home</a>
+                  <a class="nav-link" href="index.html">Home</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="#">Pre-Sale</a>
+                  <a class="nav-link" href="form.html">Pre-Sale</a>
                 </li>
 
                 <li class="nav-item">
-                  <a class="nav-link" href="#">Line Up</a>
+                  <a class="nav-link" href="lineup.html">Line Up</a>
                 </li>
                 <li class="nav-item dropdown">
                   <a
@@ -86,7 +86,7 @@
                     </li>
                     <li><hr class="dropdown-divider" /></li>
                     <li>
-                      <a class="dropdown-item" href="#">Gallery</a>
+                      <a class="dropdown-item" href="Gallery.html">Gallery</a>
                     </li>
                   </ul>
                 </li>
@@ -418,7 +418,7 @@
             <!-- Grid column -->
             <div class="col-md-2">
               <h6 class="text-uppercase font-weight-bold">
-                <a href="#!" class="footer-text">FAQs</a>
+                <a href="FAQsPage.html" class="footer-text">FAQs</a>
               </h6>
             </div>
             <!-- Grid column -->
