--- a/aboutUs.html
+++ b/aboutUs.html
@@ -58,14 +58,14 @@
             <div class="collapse navbar-collapse" id="navbarNav">
               <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                 <li class="nav-item">
-                  <a class="nav-link" href="#">Home</a>
+                  <a class="nav-link" href="index.html">Home</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="#">Pre-Sale</a>
+                  <a class="nav-link" href="form.html">Pre-Sale</a>
                 </li>
 
                 <li class="nav-item">
-                  <a class="nav-link" href="#">Line Up</a>
+                  <a class="nav-link" href="lineup.html">Line Up</a>
                 </li>
                 <li class="nav-item dropdown">
                   <a
@@ -83,7 +83,7 @@
                     </li>
                     <li><hr class="dropdown-divider" /></li>
                     <li>
-                      <a class="dropdown-item" href="#">Gallery</a>
+                      <a class="dropdown-item" href="Gallery.html">Gallery</a>
                     </li>
                   </ul>
                 </li>
