--- a/index.html
+++ b/index.html
@@ -33,13 +33,13 @@
           <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
               <li class="nav-item">
-                <a class="nav-link" href="#">HOME</a>
+                <a class="nav-link" href="index.html">HOME</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">PRE-SALE</a>
+                <a class="nav-link" href="form.html">PRE-SALE</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">LINE UP</a>
+                <a class="nav-link" href="lineup.html">LINE UP</a>
               </li>
               <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" role="button" data-bs-toggle="dropdown" aria-expanded="false">EXPLORE
