--- a/interactiveMap.html
+++ b/interactiveMap.html
@@ -2,6 +2,9 @@
 <html>
 
 <head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Amplify Festival 2024</title>
   <link rel="stylesheet" href="style2.css">
   <link rel="stylesheet" href="HomeStyle.css">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css">
