Search bar working

--- a/form.html
+++ b/form.html
@@ -60,8 +60,8 @@
                 </ul>
               </li>
             </ul>
-            <form class="d-flex" role="search">
-              <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search" />
+            <form class="d-flex" role="search" onsubmit="performSearch(); return false;">
+              <input id="search-input" class="form-control me-2" type="search" placeholder="Search" aria-label="Search" />
               <button class="searchBtn" type="submit">SEARCH</button>
             </form>
           </div>
