--- a/lineup.html
+++ b/lineup.html
@@ -57,10 +57,11 @@
                     </ul>
                   </li>
                 </ul>
-                <form class="d-flex" role="search">
-                  <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search" />
+                <form class="d-flex" role="search" onsubmit="performSearch(); return false;">
+                  <input id="search-input" class="form-control me-2" type="search" placeholder="Search" aria-label="Search" />
                   <button class="searchBtn" type="submit">SEARCH</button>
                 </form>
+
               </div>
             </div>
           </nav>
@@ -208,7 +209,9 @@
   </footer>
 
 <!-- Bootstrap and jQuery Scripts -->
-<script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha384-fgFmiFgy4pPaQKHy5d1N93uHF4U8TC5NOZBq58rsPb1SZJwqVea6F72F4c9A5lcz" crossorigin="anonymous"></script>
+<script src="https://code.jquery.com/jquery-3.6.0.min.js" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+<!-- Include this JavaScript code at the end of your HTML file, just before the closing </body> tag. -->
+<script src="siteScript.js"></script>
 </body>
 </html>
