--- a/Gallery.html
+++ b/Gallery.html
@@ -225,5 +225,5 @@
     integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
     crossorigin="anonymous"></script>
 </body>
-
+<script src="siteScript.js"></script>
 </html>
