--- a/aboutUs.html
+++ b/aboutUs.html
@@ -220,5 +220,6 @@
       integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
       crossorigin="anonymous"
     ></script>
+    <script src="siteScript.js"></script>
   </body>
 </html>
