--- a/maintenance.html
+++ b/maintenance.html
@@ -159,5 +159,6 @@
 <!-- Bootstrap and jQuery Scripts -->
 <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha384-fgFmiFgy4pPaQKHy5d1N93uHF4U8TC5NOZBq58rsPb1SZJwqVea6F72F4c9A5lcz" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+<script src="siteScript.js"></script>
 </body>
 </html>
