edits to all bar nav links

--- a/aboutUs.html
+++ b/aboutUs.html
@@ -74,19 +74,15 @@
                     role="button"
                     data-bs-toggle="dropdown"
                     aria-expanded="false"
-                    >Explore
+                    >EXPLORE
                   </a>
 
                   <ul class="dropdown-menu">
-                    <li><a class="dropdown-item" href="#">Visiting</a></li>
-                    <li>
-                      <a class="dropdown-item" href="#">Volunteering</a>
-                    </li>
+                    <li><a class="dropdown-item" href="interactiveMap.html">MAP</a></li>
                     <li><hr class="dropdown-divider" /></li>
-                    <li>
-                      <a class="dropdown-item" href="Gallery.html">Gallery</a>
-                    </li>
+                    <li><a class="dropdown-item" href="Gallery.html">GALLERY</a></li>
                   </ul>
+
                 </li>
               </ul>
               <form class="d-flex" role="search">
