--- a/Gallery.html
+++ b/Gallery.html
@@ -46,11 +46,16 @@
                 <a class="nav-link" href="lineup.html">LINE UP</a>
               </li>
               <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" role="button" data-bs-toggle="dropdown" aria-expanded="false">EXPLORE
+                <a
+                  class="nav-link dropdown-toggle"
+                  role="button"
+                  data-bs-toggle="dropdown"
+                  aria-expanded="false"
+                  >Explore
                 </a>
+
                 <ul class="dropdown-menu">
-                  <li><a class="dropdown-item" href="#">VISITING</a></li>
-                  <li><a class="dropdown-item" href="#">VOLUNTEERING</a></li>
+                  <li><a class="dropdown-item" href="interactiveMap.html">MAP</a></li>
                   <li><hr class="dropdown-divider" /></li>
                   <li><a class="dropdown-item" href="Gallery.html">GALLERY</a></li>
                 </ul>
