--- a/form.html
+++ b/form.html
@@ -49,15 +49,21 @@
               <li class="nav-item">
                 <a class="nav-link" href="lineup.html">LINE UP</a>
               </li>
-              <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" role="button" data-bs-toggle="dropdown" aria-expanded="false">EXPLORE
-                </a>
-                <ul class="dropdown-menu">
-                  <li><a class="dropdown-item" href="#">VISITING</a></li>
-                  <li><a class="dropdown-item" href="interactiveMap.html">EXPLORE</a></li>
-                  <li><hr class="dropdown-divider" /></li>
-                  <li><a class="dropdown-item" href="Gallery.html">GALLERY</a></li>
-                </ul>
+
+                <li class="nav-item dropdown">
+                  <a
+                    class="nav-link dropdown-toggle"
+                    role="button"
+                    data-bs-toggle="dropdown"
+                    aria-expanded="false"
+                    >EXPLORE
+                  </a>
+
+                  <ul class="dropdown-menu">
+                    <li><a class="dropdown-item" href="interactiveMap.html">MAP</a></li>
+                    <li><hr class="dropdown-divider" /></li>
+                    <li><a class="dropdown-item" href="Gallery.html">GALLERY</a></li>
+                  </ul>
               </li>
             </ul>
             <form class="d-flex" role="search">
