Added some missing links, unsuccessfully tried to figure out why footer is pissing about

--- a/aboutUs.html
+++ b/aboutUs.html
@@ -75,15 +75,30 @@
                   </a>
 
                   <ul class="dropdown-menu">
-                    <li><a class="dropdown-item" href="interactiveMap.html">MAP</a></li>
+                    <li>
+                      <a class="dropdown-item" href="interactiveMap.html"
+                        >MAP</a
+                      >
+                    </li>
                     <li><hr class="dropdown-divider" /></li>
-                    <li><a class="dropdown-item" href="Gallery.html">GALLERY</a></li>
+                    <li>
+                      <a class="dropdown-item" href="Gallery.html">GALLERY</a>
+                    </li>
                   </ul>
-
                 </li>
               </ul>
-              <form class="d-flex" role="search" onsubmit="performSearch(); return false;">
-                <input id="search-input" class="form-control me-2" type="search" placeholder="Search" aria-label="Search" />
+              <form
+                class="d-flex"
+                role="search"
+                onsubmit="performSearch(); return false;"
+              >
+                <input
+                  id="search-input"
+                  class="form-control me-2"
+                  type="search"
+                  placeholder="Search"
+                  aria-label="Search"
+                />
                 <button class="searchBtn" type="submit">SEARCH</button>
               </form>
             </div>
@@ -222,7 +237,7 @@
             <!-- Grid column -->
             <div class="col-md-2">
               <h6 class="text-uppercase font-weight-bold">
-                <a href="#!" class="footer-text">About us</a>
+                <a href="aboutUs.html" class="footer-text">About us</a>
               </h6>
             </div>
             <!-- Grid column -->
@@ -238,7 +253,7 @@
             <!-- Grid column -->
             <div class="col-md-2">
               <h6 class="text-uppercase font-weight-bold">
-                <a href="#!" class="footer-text">Contact</a>
+                <a href="maintenance.html" class="footer-text">Contact</a>
               </h6>
             </div>
             <!-- Grid column -->
@@ -246,7 +261,7 @@
             <!-- Grid column -->
             <div class="col-md-2">
               <h6 class="text-uppercase font-weight-bold">
-                <a href="#!" class="footer-text">Privacy</a>
+                <a href="maintenance.html" class="footer-text">Privacy</a>
               </h6>
             </div>
             <!-- Grid column -->
@@ -254,7 +269,7 @@
             <!-- Grid column -->
             <div class="col-md-2">
               <h6 class="text-uppercase font-weight-bold">
-                <a href="#!" class="footer-text">T&Cs</a>
+                <a href="maintenance.html" class="footer-text">T&Cs</a>
               </h6>
             </div>
             <!-- Grid column -->
