--- a/FAQsPage.html
+++ b/FAQsPage.html
@@ -389,7 +389,7 @@
             <!-- Grid column -->
             <div class="col-md-2">
               <h6 class="text-uppercase font-weight-bold">
-                <a href="#!" class="footer-text">About us</a>
+                <a href="aboutUs.html" class="footer-text">About us</a>
               </h6>
             </div>
             <!-- Grid column -->
