Added working links where missing

--- a/FAQsPage.html
+++ b/FAQsPage.html
@@ -405,7 +405,7 @@
             <!-- Grid column -->
             <div class="col-md-2">
               <h6 class="text-uppercase font-weight-bold">
-                <a href="#!" class="footer-text">Contact</a>
+                <a href="maintenance.html" class="footer-text">Contact</a>
               </h6>
             </div>
             <!-- Grid column -->
@@ -413,7 +413,7 @@
             <!-- Grid column -->
             <div class="col-md-2">
               <h6 class="text-uppercase font-weight-bold">
-                <a href="#!" class="footer-text">Privacy</a>
+                <a href="maintenance.html" class="footer-text">Privacy</a>
               </h6>
             </div>
             <!-- Grid column -->
@@ -421,7 +421,7 @@
             <!-- Grid column -->
             <div class="col-md-2">
               <h6 class="text-uppercase font-weight-bold">
-                <a href="#!" class="footer-text">T&Cs</a>
+                <a href="maintenance.html" class="footer-text">T&Cs</a>
               </h6>
             </div>
             <!-- Grid column -->
