--- a/Gallery.html
+++ b/Gallery.html
@@ -152,7 +152,7 @@
           <!-- Grid column -->
           <div class="col-md-2">
             <h6 class="text-uppercase font-weight-bold">
-              <a href="#!" class="footer-text">ABOUT us</a>
+              <a href="aboutUs.html" class="footer-text">ABOUT us</a>
             </h6>
           </div>
           <!-- Grid column -->
@@ -168,7 +168,7 @@
           <!-- Grid column -->
           <div class="col-md-2">
             <h6 class="text-uppercase font-weight-bold">
-              <a href="#!" class="footer-text">CONTACT</a>
+              <a href="maintenance.html" class="footer-text">CONTACT</a>
             </h6>
           </div>
           <!-- Grid column -->
@@ -176,7 +176,7 @@
           <!-- Grid column -->
           <div class="col-md-2">
             <h6 class="text-uppercase font-weight-bold">
-              <a href="#!" class="footer-text">PRIVACY</a>
+              <a href="maintenance.html" class="footer-text">PRIVACY</a>
             </h6>
           </div>
           <!-- Grid column -->
@@ -184,7 +184,7 @@
           <!-- Grid column -->
           <div class="col-md-2">
             <h6 class="text-uppercase font-weight-bold">
-              <a href="#!" class="footer-text">T&Cs</a>
+              <a href="maintenance.html" class="footer-text">T&Cs</a>
             </h6>
           </div>
           <!-- Grid column -->
