--- a/form.html
+++ b/form.html
@@ -173,7 +173,7 @@
           <!-- Grid column -->
           <div class="col-md-2">
             <h6 class="text-uppercase font-weight-bold">
-              <a href="#!" class="footer-text">ABOUT us</a>
+              <a href="aboutUs.html" class="footer-text">ABOUT US</a>
             </h6>
           </div>
           <!-- Grid column -->
@@ -189,7 +189,7 @@
           <!-- Grid column -->
           <div class="col-md-2">
             <h6 class="text-uppercase font-weight-bold">
-              <a href="#!" class="footer-text">CONTACT</a>
+              <a href="maintenance.html" class="footer-text">CONTACT</a>
             </h6>
           </div>
           <!-- Grid column -->
@@ -197,7 +197,7 @@
           <!-- Grid column -->
           <div class="col-md-2">
             <h6 class="text-uppercase font-weight-bold">
-              <a href="#!" class="footer-text">PRIVACY</a>
+              <a href="maintenance.html" class="footer-text">PRIVACY</a>
             </h6>
           </div>
           <!-- Grid column -->
@@ -205,7 +205,7 @@
           <!-- Grid column -->
           <div class="col-md-2">
             <h6 class="text-uppercase font-weight-bold">
-              <a href="#!" class="footer-text">T&Cs</a>
+              <a href="maintenance.html" class="footer-text">T&Cs</a>
             </h6>
           </div>
           <!-- Grid column -->
