About Us images resized for consistency

--- a/aboutUs.html
+++ b/aboutUs.html
@@ -148,7 +148,7 @@
               <img
                 src="Images/SianProfile.png"
                 class="card-img-top"
-                alt="Picture of Sian"
+                alt="Sian image"
               />
               <div class="card-body">
                 <h5 class="card-title">Sian</h5>
@@ -161,7 +161,9 @@
                   natural empath and am adept at conveying complex ideas in an
                   easy-to-understand way, as well as having an excellent
                   understanding of how to develop accessible and inclusive
-                  content for an equitable experience.
+                  content for an equitable experience. I'd love to arrange a
+                  coffee-date (virtual is fine!) to discuss how I can bring a
+                  fresh perspective to your project.
                 </p>
                 <div class="btnArea"></div>
               </div>
@@ -169,7 +171,11 @@
           </div>
           <div class="col">
             <div class="card h-100">
-              <img src="Images/AnaProfile.jpg" class="card-img-top" alt="#" />
+              <img
+                src="Images/AnaProfile.jpg"
+                class="card-img-top"
+                alt="Ana image"
+              />
               <div class="card-body">
                 <h5 class="card-title">Ana</h5>
                 <p class="card-text">
@@ -190,7 +196,11 @@
           </div>
           <div class="col">
             <div class="card h-100">
-              <img src="Images/ElisaProfile.jpg" class="card-img-top" alt="#" />
+              <img
+                src="Images/ElisaProfile.jpg"
+                class="card-img-top"
+                alt="Elisa image"
+              />
               <div class="card-body">
                 <h5 class="card-title">Elisa</h5>
                 <p class="card-text">
@@ -208,14 +218,25 @@
           </div>
           <div class="col">
             <div class="card h-100">
-              <img src="#" class="card-img-top" alt="#" />
+              <img
+                src="Images/GabrielleProfile.png"
+                class="card-img-top"
+                alt="Gabrielle image"
+              />
               <div class="card-body">
                 <h5 class="card-title">Gabrielle</h5>
                 <p class="card-text">
-                  Lorem ipsum dolor, sit amet consectetur adipisicing elit.
-                  Aliquid fugit aperiam itaque optio voluptate aut tenetur
-                  adipisci dolorum veritatis? Nihil aut modi nobis ipsa harum
-                  odit dolore similique, cumque quaerat.
+                  Hiya, I'm Gabrielle, and my tech-inspired journey started with
+                  humble beginnings as an avid pre-teen tumblr enthusiast. These
+                  days, I work in-house as an SEO and marketing specialist,
+                  where I optimise and create content for a franchise of over 60
+                  sites. I'm thrilled to now be able to apply my newfound web
+                  development skills in my current projects – building a
+                  corporate internal comms site and Woocommerce store. I'm an
+                  ambitious and creative soul with an insatiable hunger for
+                  learning. My ultimate goal? To enroll in CFG's degree program
+                  in spring 2024 and carve out a career in UX/UI as a front-end
+                  web developer.
                 </p>
                 <div class="btnArea"></div>
               </div>
